--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <td id="column7"></td>
       </tr>
     </table>
-    <table class="board">
+    <!-- <table class="board">
       <tr>
         <td></td>
         <td></td>
@@ -68,7 +68,7 @@
         <td></td>
         <td></td>
       </tr>
-    </table>
+    </table> -->
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
