winner is now found and announced.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         <td id="x0y6"></td>
       </tr>
     </table>
+    <div id="winner" class="winner">
+      
+    </div>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
