--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <table class="choice">
+    <table id="game-board" class="choice">
       <tr>
         <td id="column1"></td>
         <td id="column2"></td>
@@ -74,7 +74,7 @@
       </tr>
     </table>
     <div id="winner" class="winner">
-      
+
     </div>
     <script type="text/javascript" src="app.js"></script>
   </body>
