--- a/index.html
+++ b/index.html
@@ -6,73 +6,76 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <table id="game-board" class="choice">
-      <tr>
-        <td id="column1"></td>
-        <td id="column2"></td>
-        <td id="column3"></td>
-        <td id="column4"></td>
-        <td id="column5"></td>
-        <td id="column6"></td>
-        <td id="column7"></td>
-      </tr>
-    </table>
-    <table class="board">
-      <tr>
-        <td id="x5y0"></td>
-        <td id="x5y1"></td>
-        <td id="x5y2"></td>
-        <td id="x5y3"></td>
-        <td id="x5y4"></td>
-        <td id="x5y5"></td>
-        <td id="x5y6"></td>
-      </tr>
-      <tr>
-        <td id="x4y0"></td>
-        <td id="x4y1"></td>
-        <td id="x4y2"></td>
-        <td id="x4y3"></td>
-        <td id="x4y4"></td>
-        <td id="x4y5"></td>
-        <td id="x4y6"></td>
-      </tr>
-      <tr>
-        <td id="x3y0"></td>
-        <td id="x3y1"></td>
-        <td id="x3y2"></td>
-        <td id="x3y3"></td>
-        <td id="x3y4"></td>
-        <td id="x3y5"></td>
-        <td id="x3y6"></td>
-      </tr>
-      <tr>
-        <td id="x2y0"></td>
-        <td id="x2y1"></td>
-        <td id="x2y2"></td>
-        <td id="x2y3"></td>
-        <td id="x2y4"></td>
-        <td id="x2y5"></td>
-        <td id="x2y6"></td>
-      </tr>
-      <tr>
-        <td id="x1y0"></td>
-        <td id="x1y1"></td>
-        <td id="x1y2"></td>
-        <td id="x1y3"></td>
-        <td id="x1y4"></td>
-        <td id="x1y5"></td>
-        <td id="x1y6"></td>
-      </tr>
-      <tr>
-        <td id="x0y0"></td>
-        <td id="x0y1"></td>
-        <td id="x0y2"></td>
-        <td id="x0y3"></td>
-        <td id="x0y4"></td>
-        <td id="x0y5"></td>
-        <td id="x0y6"></td>
-      </tr>
-    </table>
+    <div class="game-board">
+      <table class="choice">
+        <tr>
+          <td id="column1"></td>
+          <td id="column2"></td>
+          <td id="column3"></td>
+          <td id="column4"></td>
+          <td id="column5"></td>
+          <td id="column6"></td>
+          <td id="column7"></td>
+        </tr>
+      </table>
+      <table class="board">
+        <tr>
+          <td id="x5y0"></td>
+          <td id="x5y1"></td>
+          <td id="x5y2"></td>
+          <td id="x5y3"></td>
+          <td id="x5y4"></td>
+          <td id="x5y5"></td>
+          <td id="x5y6"></td>
+        </tr>
+        <tr>
+          <td id="x4y0"></td>
+          <td id="x4y1"></td>
+          <td id="x4y2"></td>
+          <td id="x4y3"></td>
+          <td id="x4y4"></td>
+          <td id="x4y5"></td>
+          <td id="x4y6"></td>
+        </tr>
+        <tr>
+          <td id="x3y0"></td>
+          <td id="x3y1"></td>
+          <td id="x3y2"></td>
+          <td id="x3y3"></td>
+          <td id="x3y4"></td>
+          <td id="x3y5"></td>
+          <td id="x3y6"></td>
+        </tr>
+        <tr>
+          <td id="x2y0"></td>
+          <td id="x2y1"></td>
+          <td id="x2y2"></td>
+          <td id="x2y3"></td>
+          <td id="x2y4"></td>
+          <td id="x2y5"></td>
+          <td id="x2y6"></td>
+        </tr>
+        <tr>
+          <td id="x1y0"></td>
+          <td id="x1y1"></td>
+          <td id="x1y2"></td>
+          <td id="x1y3"></td>
+          <td id="x1y4"></td>
+          <td id="x1y5"></td>
+          <td id="x1y6"></td>
+        </tr>
+        <tr>
+          <td id="x0y0"></td>
+          <td id="x0y1"></td>
+          <td id="x0y2"></td>
+          <td id="x0y3"></td>
+          <td id="x0y4"></td>
+          <td id="x0y5"></td>
+          <td id="x0y6"></td>
+        </tr>
+      </table>
+
+    </div>
     <div id="winner" class="winner">
 
     </div>
